tests/spec/compile-fail/042_impl_send_without_trust.zn
// category: compile-fail
// profile: freestanding
// purpose: manual Send implementations require an explicit trust boundary

module tests.fail.implSendWithoutTrust;

struct LocalHandle {
    raw: I32,
}

impl LocalHandle {
    destroy {}
}

impl Send for LocalHandle {} // expected-error: manual Send implementation requires trust impl
